Fixed h2 tag sizes on mobile

--- a/assets/css/stylesheet.css
+++ b/assets/css/stylesheet.css
@@ -44,6 +44,12 @@ h2 {
   font-size: 4vmin;
 }
 
+@media screen and (max-width: 768px) {
+  h2 {
+    font-size: 6vmin;
+  }
+}
+
 .logos {
   height: 70px;
   max-width: 100%;
