--- a/assets/css/waterfall.theme.scss
+++ b/assets/css/waterfall.theme.scss
@@ -41,19 +41,12 @@ h1 {
 }
 h2 {
     text-transform: uppercase;
-    //margin-bottom: 30px;
     text-align: center;
-}
-h3 {
-    //content
 }
 h4 {
     line-height: 1.375em;
     font-weight: 400;
     margin-bottom: 30px;
-}
-.container-fluid {
-    //margin: 60px 50px;
 }
 .pa-banner-text {
     /* this class initially referenced in Pineapple.css (pa-lib.com) */
